restructuring of notebooks, introduced variables for parameters, later move all implentation params/hyperparams to a seperate config file

--- a/notebooks/datasets_merge.ipynb
+++ b/notebooks/datasets_merge.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "4e02390a",
    "metadata": {},
    "outputs": [],
@@ -33,22 +33,24 @@
     "sys.path.insert(0, str(_project_root))\n",
     "\n",
     "import datetime as dt\n",
+    "import gc\n",
+    "import importlib\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Optional: reload project modules without restarting the kernel\n",
-    "import importlib\n",
+    "# Module imports\n",
     "import src.accidents as accidents\n",
     "import src.segments as segments\n",
     "import src.strava_exposure as strava_exposure\n",
     "import src.panels as panels\n",
     "import src.nodes as nodes\n",
-    "for _m in (accidents, segments, strava_exposure, panels, nodes):\n",
-    "    importlib.reload(_m)\n",
+    "\n",
+    "# Optional: reload project modules without restarting the kernel (uncomment if needed)\n",
+    "# for _m in (accidents, segments, strava_exposure, panels, nodes):\n",
+    "#     importlib.reload(_m)\n",
     "\n",
     "from src.accidents import (\n",
     "    ACCIDENT_COLUMNS_EN,\n",
@@ -75,31 +77,34 @@
     "    build_nodes_from_segment_endpoints,\n",
     "    cluster_nodes_snap_grid,\n",
     "    select_crossings_by_degree,\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "# Configuration constants\n",
+    "DATA_DIR = _project_root / \"data\"\n",
+    "MERGED_DIR = DATA_DIR / \"merged\"\n",
+    "CANONICAL_CRS = \"EPSG:32633\"\n",
+    "MAX_DISTANCE_M = 10\n",
+    "MAX_DISTANCE_M_NEREAST_CROSSING = 20\n",
+    "NODE_SNAP_TOLERANCE_M = 2\n",
+    "CROSSING_MIN_DEGREE = 3\n",
+    "\n",
+    "\n",
+    "def save_panel(df, filename, crs=None):\n",
+    "    \"\"\"Save dataframe to parquet in merged directory.\"\"\"\n",
+    "    MERGED_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "    out_path = MERGED_DIR / filename\n",
+    "    \n",
+    "    if crs is not None:\n",
+    "        df = gpd.GeoDataFrame(df, geometry=\"geometry\", crs=crs)\n",
+    "    \n",
+    "    df.to_parquet(out_path, index=False)\n",
+    "    print(f\"Saved: {out_path}\")\n",
+    "    return out_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f51cf230",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/laysan/Desktop/University/data_literacy_/data_literacy/venv/bin/python\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.executable)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ffdcaf4f",
    "metadata": {},
    "outputs": [
@@ -112,11 +117,7 @@
     }
    ],
    "source": [
-    "# Kernel cleanup: drop old variables from pre-refactor runs\n",
-    "# (Equivalent to a kernel restart for the pipeline variables.)\n",
-    "import gc\n",
-    "import sys\n",
-    "\n",
+    "# Kernel cleanup (due to earlier issues with kernel crashing on re-runs)\n",
     "# Ensure the removed module isn't lingering in memory\n",
     "sys.modules.pop(\"src.merge_datasets\", None)\n",
     "\n",
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8a60e2b4",
    "metadata": {},
    "outputs": [
@@ -387,26 +388,22 @@
     }
    ],
    "source": [
-    "import gc\n",
-    "\n",
     "accidents_raw = load_accidents_raw()\n",
     "print(\"Raw accidents shape:\", accidents_raw.shape)\n",
     "\n",
-    "accident_columns_en = ACCIDENT_COLUMNS_EN\n",
-    "\n",
-    "accidents_bike_berlin = prepare_accidents_bike_berlin(accidents_raw, column_map=accident_columns_en)\n",
+    "accidents_bike_berlin = prepare_accidents_bike_berlin(accidents_raw, column_map=ACCIDENT_COLUMNS_EN)\n",
     "print(f\"Filtered to bicycle accidents in Berlin -> shape: {accidents_bike_berlin.shape}\")\n",
     "\n",
     "# Free big raw dataframe early to keep memory low for Strava aggregation\n",
     "del accidents_raw\n",
     "gc.collect()\n",
     "\n",
-    "accidents_bike_berlin.head()\n"
+    "accidents_bike_berlin.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "02a7eb35",
    "metadata": {},
    "outputs": [
@@ -433,9 +430,7 @@
     }
    ],
    "source": [
-    "# --- Add temporal features: weekday_type and time_of_day ---\n",
-    "# These will be aggregated as categorical features in the rich accident panel\n",
-    "\n",
+    "# Add temporal features: weekday_type and time_of_day\n",
     "# weekday_type: weekday (Mon-Fri) vs weekend (Sat-Sun)\n",
     "# Day of the week: 1=Sunday, 2=Monday, ..., 7=Saturday\n",
     "if \"weekday\" in accidents_bike_berlin.columns:\n",
@@ -484,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "9d3bb075",
    "metadata": {},
    "outputs": [
@@ -531,18 +526,16 @@
    ],
    "source": [
     "# Column map is now maintained in src.accidents\n",
-    "accident_columns_en = ACCIDENT_COLUMNS_EN\n",
-    "\n",
-    "# (Optional) quick per-column uniqueness scan\n",
-    "for col in accidents_bike_berlin.columns:\n",
-    "    uniq_cnt = accidents_bike_berlin[col].nunique(dropna=True)\n",
-    "    first_vals = accidents_bike_berlin[col].head(5).tolist()\n",
-    "    print(f\"{col}: uniques={uniq_cnt}; first5={first_vals}\")\n"
+    "# (Exploratory: per-column uniqueness scan - comment out for production runs)\n",
+    "# for col in accidents_bike_berlin.columns:\n",
+    "#     uniq_cnt = accidents_bike_berlin[col].nunique(dropna=True)\n",
+    "#     first_vals = accidents_bike_berlin[col].head(5).tolist()\n",
+    "#     print(f\"{col}: uniques={uniq_cnt}; first5={first_vals}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "5b926bb6",
    "metadata": {},
    "outputs": [
@@ -635,13 +628,12 @@
     }
    ],
    "source": [
-    "seg = load_segment_geometry(canonical_crs=\"EPSG:32633\")\n",
-    "CANONICAL_CRS = seg.canonical_crs\n",
+    "seg = load_segment_geometry(canonical_crs=CANONICAL_CRS)\n",
     "\n",
     "segment_geo_gdf = seg.segments_gdf\n",
     "segment_static = seg.segment_static\n",
     "\n",
-    "segment_geo_gdf.head()\n"
+    "segment_geo_gdf.head()"
    ]
   },
   {
@@ -660,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "5d88c2e1",
    "metadata": {},
    "outputs": [
@@ -888,7 +880,7 @@
     "    accidents_bike_berlin,\n",
     "    segment_geo_gdf,\n",
     "    canonical_crs=CANONICAL_CRS,\n",
-    "    max_distance_m=10,\n",
+    "    max_distance_m=MAX_DISTANCE_M,\n",
     ")\n",
     "\n",
     "print(f\"Total accidents: {len(accidents_bike_berlin)}\")\n",
@@ -897,7 +889,7 @@
     "print(f\"Accidents assigned to segments: {len(joined_nearest_unique)}\")\n",
     "print(f\"Ratio of assigned accidents: {len(joined_nearest_unique) / len(accidents_bike_berlin):.2%}\")\n",
     "\n",
-    "joined_nearest_unique.head()\n"
+    "joined_nearest_unique.head()"
    ]
   },
   {
@@ -1734,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "bd2a334c",
    "metadata": {},
    "outputs": [
@@ -2008,7 +2000,7 @@
     "\n",
     "accidents_agg_ym_rich = aggregate_accidents_segment_year_month_rich(\n",
     "    joined_nearest_unique,\n",
-    "    column_map=accident_columns_en,\n",
+    "    column_map=ACCIDENT_COLUMNS_EN,\n",
     "    exposure_year_min=min_year,\n",
     "    exposure_year_max=max_year,\n",
     ")\n",
@@ -2017,7 +2009,7 @@
     "    \"Rich accident aggregate (segment–year–month) shape:\",\n",
     "    accidents_agg_ym_rich.shape,\n",
     ")\n",
-    "accidents_agg_ym_rich.head()\n"
+    "accidents_agg_ym_rich.head()"
    ]
   },
   {
@@ -2030,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "8e2df095",
    "metadata": {},
    "outputs": [
@@ -2058,16 +2050,11 @@
     "merged_accidents_strava_ym.head()\n",
     "\n",
     "# Save merged segment panel\n",
-    "out_dir = _project_root / \"data\" / \"merged\"\n",
-    "out_dir.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "out_path = out_dir / \"berlin_bike_accident_strava_panel.parquet\"\n",
-    "\n",
-    "gpd.GeoDataFrame(\n",
+    "save_panel(\n",
     "    merged_accidents_strava_ym,\n",
-    "    geometry=\"geometry\",\n",
-    "    crs=segment_geo_gdf.crs,\n",
-    ").to_parquet(out_path, index=False)\n"
+    "    \"berlin_bike_accident_strava_panel.parquet\",\n",
+    "    crs=segment_geo_gdf.crs\n",
+    ")"
    ]
   },
   {
@@ -2113,12 +2100,12 @@
    "id": "57547572",
    "metadata": {},
    "source": [
-    "# Playground, to create and test smaller dataset version. The smaller ones are created based on the completly merged version."
+    "# Some Data Inspection after Merging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "d06828c8",
    "metadata": {},
    "outputs": [
@@ -2221,24 +2208,16 @@
     "print(core_panel.head(5))\n",
     "\n",
     "# Save geodataframe to parquet file\n",
-    "out_dir = _project_root / \"data\" / \"merged\"\n",
-    "out_dir.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "out_path = out_dir / \"berlin_bike_accident_strava_risk_core_panel.parquet\"\n",
-    "\n",
-    "gpd.GeoDataFrame(\n",
+    "save_panel(\n",
     "    core_panel,\n",
-    "    geometry=\"geometry\",\n",
-    "    crs=segment_geo_gdf.crs,\n",
-    " ).to_parquet(\n",
-    "    out_path,\n",
-    "    index=False,\n",
-    " )"
+    "    \"berlin_bike_accident_strava_risk_core_panel.parquet\",\n",
+    "    crs=segment_geo_gdf.crs\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "4d49be60",
    "metadata": {},
    "outputs": [
@@ -2252,12 +2231,10 @@
     }
    ],
    "source": [
-    "# find unique numbers of accidents in core_panel\n",
-    "unique_accident_counts = core_panel[\"total_accidents\"].nunique()\n",
-    "print(f\"Unique accident counts in core panel: {unique_accident_counts}\")\n",
-    "\n",
-    "# display those unique counts\n",
-    "print(\"Unique accident counts:\", core_panel[\"total_accidents\"].unique())"
+    "# Exploratory: find unique numbers of accidents in core_panel (comment out for production)\n",
+    "# unique_accident_counts = core_panel[\"total_accidents\"].nunique()\n",
+    "# print(f\"Unique accident counts in core panel: {unique_accident_counts}\")\n",
+    "# print(\"Unique accident counts:\", core_panel[\"total_accidents\"].unique())"
    ]
   },
   {
@@ -2502,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "58fe3a80",
    "metadata": {},
    "outputs": [
@@ -2592,7 +2569,7 @@
    "source": [
     "clustering = cluster_nodes_snap_grid(\n",
     "    nodes_raw,\n",
-    "    tol_m=2,\n",
+    "    tol_m=NODE_SNAP_TOLERANCE_M,\n",
     "    counter_col=\"counter_name\",\n",
     ")\n",
     "\n",
@@ -2615,7 +2592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "68a4d6fe",
    "metadata": {},
    "outputs": [
@@ -2698,13 +2675,13 @@
    "source": [
     "crossing_ids = select_crossings_by_degree(\n",
     "    nodes_raw,\n",
-    "    min_degree=3,\n",
+    "    min_degree=CROSSING_MIN_DEGREE,\n",
     "    counter_col=\"counter_name\",\n",
     ")\n",
     "\n",
     "crossings_gdf = node_points[node_points[\"node_id\"].isin(crossing_ids)].copy()\n",
     "\n",
-    "print(\"Crossings (degree >= 3):\", len(crossings_gdf))\n",
+    "print(f\"Crossings (degree >= {CROSSING_MIN_DEGREE}):\", len(crossings_gdf))\n",
     "crossings_gdf.head()"
    ]
   },
@@ -2718,7 +2695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "626622c8",
    "metadata": {},
    "outputs": [
@@ -3216,7 +3193,7 @@
     "acc_node, acc_node_ym = assign_accidents_to_nearest_crossing(\n",
     "    study_area_accidents,\n",
     "    crossings_gdf,\n",
-    "    max_distance_m=20,\n",
+    "    max_distance_m=MAX_DISTANCE_M_NEREAST_CROSSING,\n",
     ")\n",
     "\n",
     "print(\"Study-area accidents (after segment corridor filter):\", len(acc_node))\n",
@@ -3226,10 +3203,7 @@
     "acc_node_ym.head()\n",
     "\n",
     "# Save accident->crossing mapping for debugging/visualization\n",
-    "out_dir = _project_root / \"data\" / \"merged\"\n",
-    "out_dir.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "acc_node.to_parquet(out_dir / \"acc_node.parquet\", index=False)\n",
+    "save_panel(acc_node, \"acc_node.parquet\")\n",
     "acc_node_ym"
    ]
   },
@@ -3357,7 +3331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "222579c4",
    "metadata": {},
    "outputs": [
@@ -3381,15 +3355,9 @@
     "print(\"Node panel (crossing x year x month) shape:\", node_panel_ym.shape)\n",
     "node_panel_ym.head()\n",
     "\n",
-    "# Save node panel\n",
-    "out_dir = _project_root / \"data\" / \"merged\"\n",
-    "out_dir.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "out_path = out_dir / \"berlin_bike_accident_node_panel.parquet\"\n",
-    "node_panel_ym.to_parquet(out_path, index=False)\n",
-    "\n",
-    "# Also save node exposure panel for debugging\n",
-    "node_exposure_ym.to_parquet(out_dir / \"berlin_bike_node_exposure_panel.parquet\", index=False)\n"
+    "# Save node panels\n",
+    "save_panel(node_panel_ym, \"berlin_bike_accident_node_panel.parquet\")\n",
+    "save_panel(node_exposure_ym, \"berlin_bike_node_exposure_panel.parquet\")"
    ]
   },
   {
@@ -3905,7 +3873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "cdf6f09e",
    "metadata": {},
    "outputs": [
@@ -3930,7 +3898,6 @@
     "# 3) assigned accidents respect radius\n",
     "max_dist = acc_node.loc[acc_node[\"has_crossing\"], \"dist_node\"].max()\n",
     "print(\"max dist among assigned:\", max_dist)\n",
-    "# Expect <= your max_distance_m (20), with tiny floating error possible\n",
     "\n",
     "# 4) acc_node_ym matches acc_node counts by node/month\n",
     "tmp = acc_node.dropna(subset=[\"node_id\"]).copy()\n",
@@ -4208,30 +4175,6 @@
     "\n",
     "print(\"segment-sum:\", seg_sum, \"node exposure:\", node_val)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a815093",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7fec008",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d1b0fc5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
