--- a/notebooks/routing_visualization_laisan.ipynb
+++ b/notebooks/routing_visualization_laisan.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "47042c11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dir = \"../outputs/maps\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b782f1b8",
    "metadata": {},
    "outputs": [],
@@ -348,7 +358,7 @@
     "    \n",
     "    if save_path:\n",
     "        m.save(save_path)\n",
-    "        print(f\"\\n✅ Map saved to: {save_path}\")\n",
+    "        print(f\"\\nMap saved to: {save_path}\")\n",
     "    \n",
     "    # Print summary\n",
     "    print(\"\\n\" + \"=\"*60)\n",
@@ -404,7 +414,7 @@
     "    risk_scale=\"relative\"\n",
     ")\n",
     "\n",
-    "map_save_path = fig_dir / \"plot_risk_for_one_Berlin_route_relative.html\"\n",
+    "map_save_path = output_dir / \"plot_risk_for_one_Berlin_route_relative.html\"\n",
     "map_with_risks.save(map_save_path)\n",
     "print(f\"Map saved to {map_save_path}\")\n",
     "\n",
@@ -425,7 +435,7 @@
     "    risk_col=\"risk_accidents_per_10k_trips\"\n",
     ")\n",
     "\n",
-    "map_save_path_overall = fig_dir / \"plot_risk_for_one_Berlin_route_overall.html\"\n",
+    "map_save_path_overall = output_dir / \"plot_risk_for_one_Berlin_route_overall.html\"\n",
     "map_with_risks_overall.save(map_save_path_overall)\n",
     "print(f\"Map saved to {map_save_path_overall}\")\n",
     "\n",
