--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -133,7 +133,7 @@ dataset of measured bicycle volumes to compute exposure-normalized risk at the s
 intersections, we also derived risk estimates for network junctions. Risk was estimated at monthly resolution and could be conditioned on contextual factors (e.g., time 
 of day and weather) to capture temporal variability. We then aggregated segment- and junction-level risk to score arbitrary routes, enabling comparisons that trade off 
 estimated crash risk against convenience criteria such as distance or travel time. The result is a reproducible framework for exposure-controlled, context-aware 
-bicycle safety analysis and safety-informed routing on urban street networks.
+bicycle safety analysis and safety-informed routing on urban street networks.\todo{rewrite/edit, when we have final results}
 \end{abstract}
 
 \section{Introduction}\label{sec:intro}
@@ -159,7 +159,7 @@ aggregating volumes from adjoining segments. Risk is estimated at monthly resolu
 capture temporal variability. We then aggregate segment- and junction-level risk to evaluate arbitrary routes and compare alternatives that reduce estimated risk 
 while maintaining comparable convenience in terms of distance or travel time~\citep{isprs-archives-XLIII-B4-2022-427-2022}. Our work makes the following contributions: 
 (i) a reproducible pipeline for exposure-normalized crash risk at segment and junction levels using measured volumes; (ii) a framework for context-conditional risk 
-analysis; and (iii) a route-scoring procedure that integrates network-level risk into safety-aware routing under convenience constraints.
+analysis; and (iii) a route-scoring procedure that integrates network-level risk into safety-aware routing under convenience constraints.\todo{may add research questions for clarity}
 
 The paper is organized as follows: we review related work in Section~\ref{sec:relatedw}, describe the data and methods in Section~\ref{sec:data_and_methods}, present the 
 results in Section~\ref{sec:results}, and discuss and conclude in Section~\ref{sec:conclusion}.
